--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Xtreme React Free Admin Template with React router 6</title>
+    <link rel="stylesheet" href="app.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
